RESOLVED FIXED218783
Implementation for AXIsolatedObject methods that return a VisiblePositionRange.
https://bugs.webkit.org/show_bug.cgi?id=218783
Summary Implementation for AXIsolatedObject methods that return a VisiblePositionRange.
Andres Gonzalez
Reported 2020-11-10 19:31:24 PST
Implementation for AXIsolatedObject methods that return a VisiblePositionRange.
Attachments
Patch (9.26 KB, patch)
2020-11-10 19:37 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-11-10 19:37:25 PST
chris fleizach
Comment 2 2020-11-10 21:04:50 PST
Comment on attachment 413763 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=413763&action=review > Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:1181 > + return axObject ? axObject->visiblePositionRange() : VisiblePositionRange(); For the default values I think you can just return { }; now
Andres Gonzalez
Comment 3 2020-11-11 08:30:03 PST
(In reply to chris fleizach from comment #2) > Comment on attachment 413763 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=413763&action=review > > > Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:1181 > > + return axObject ? axObject->visiblePositionRange() : VisiblePositionRange(); > > For the default values I think you can just return { }; now not with ? : operators: error: initializer list cannot be used on the right hand side of operator ':'
EWS
Comment 4 2020-11-11 11:13:45 PST
Committed r269692: <https://trac.webkit.org/changeset/269692> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413763 [details].
Radar WebKit Bug Importer
Comment 5 2020-11-11 11:14:20 PST
Note You need to log in before you can comment on or make changes to this bug.