Implementation for AXIsolatedObject methods that return a VisiblePositionRange. https://bugs.webkit.org/show_bug.cgi?id=218783

Reviewed by Chris Fleizach.

Fix for the following tests in isolated tree mode:
accessibility/mac/attributed-string-with-listitem-multiple-lines.html
accessibility/mac/character-offset-from-upstream-position.html

Methods that return a VisiblePositionRange need to be called on the main
thread. The implementation of each of these methods forward the call to
the associated AXObject.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::visiblePositionRange const):
(WebCore::AXIsolatedObject::visiblePositionRangeForLine const):
(WebCore::AXIsolatedObject::visiblePositionRangeForUnorderedPositions const):
(WebCore::AXIsolatedObject::positionOfLeftWord const):
(WebCore::AXIsolatedObject::positionOfRightWord const):
(WebCore::AXIsolatedObject::leftLineVisiblePositionRange const):
(WebCore::AXIsolatedObject::rightLineVisiblePositionRange const):
(WebCore::AXIsolatedObject::sentenceForPosition const):
(WebCore::AXIsolatedObject::paragraphForPosition const):
(WebCore::AXIsolatedObject::styleRangeForPosition const):
(WebCore::AXIsolatedObject::visiblePositionRangeForRange const):
(WebCore::AXIsolatedObject::lineRangeForPosition const):
* accessibility/isolatedtree/AXIsolatedObject.h:


Canonical link: https://commits.webkit.org/231471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269692 268f45cc-cd09-0410-ab3c-d52691b4dbfc